--- a/index.css
+++ b/index.css
@@ -2,6 +2,20 @@ body{
     background-color: #F9FBFD;
 }
 
+.loader p{
+    color: white;
+    align-items: center;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 999;
+}
+
 .loader {
     align-items: center;
     background: #000;
