--- a/index.css
+++ b/index.css
@@ -1,6 +1,13 @@
 body{
     background-color: #F9FBFD;
+    font-family: "Helvetica Neue",
+    Arial,
+    "Hiragino Kaku Gothic ProN",
+    "Hiragino Sans",
+    Meiryo,
+    sans-serif;
 }
+
 
 .loader p{
     color: white;
